@@ -1,2 +1,2 @@
-EBUILD cl-desktop-meta-10.8.81.ebuild 1475 RMD160 9aaa171a6414860c8f3e1eade2c36535f6320df6 SHA1 335a1891493c84971368dc39917a5e0ea98d5e10 SHA256 0ee3083c4ee0c1f3d8bede807c72dfbaebace7f89349e56857e01d17049ad2c6
-MISC ChangeLog 607 RMD160 375a71b9e611105bf302411704ba20393475286d SHA1 838b97190ee0c25bb8676f275f51a26d67910414 SHA256 e98623a2362b7338fc86cd158acd30f74f3d797b46e70a6bebb8408c3d5bd357
+EBUILD cl-desktop-meta-10.8.81.ebuild 1602 RMD160 9412d00be9039c7b99ba014622f949475ff99068 SHA1 625394c7d8726103372f8e7bfde34ff6c69708e1 SHA256 3d14ae3bad8be28cfb3a56017d127aa22addd2f272145155733a5c18a0a724f7
+MISC ChangeLog 739 RMD160 20ccd38a2217261c14f6f608889bd171c51bf4a9 SHA1 df63f507741dbd92ab3753bcab3caa3f793c38ba SHA256 6783212ea13126c59b30fda772ab7cd2a939d150ddd5e006c06e83d0d136a44a
