@@ -1,2 +1,2 @@
-EBUILD cl-useful-meta-10.8.81.ebuild 1241 RMD160 46b099fc716710d232bc274eac1a41e916b58fab SHA1 d722227386baccde5d2ac87c26843fee521e6b74 SHA256 ea4dce3ef5c08626f7938ecfc15a1422b3877253ba949334bab0b67eb484a550
-MISC ChangeLog 1118 RMD160 f2d77b20198bed3ece286786de375faad906e866 SHA1 9c104cd182f49f8ee8f0b4d3123747fa7bcb0c2b SHA256 e2da630cb2bfe1dea761484e297e6104e510c643d75f601cc2783b497c5e2ba9
+EBUILD cl-useful-meta-10.8.81.ebuild 1180 RMD160 6a635f7870049ae92f8ce6f5afe9c02877f41e1f SHA1 13858e1c8bb4c6026e5cdf58be24feb626c71cd2 SHA256 12443ebd2e4d1b8fe703ac24a1478abc94a62a3fedd01ac6e72af51c85784698
+MISC ChangeLog 1248 RMD160 acc95269aba1d54257cc87a05e5c12870114fca0 SHA1 3fe9d658f0ce80a98ac2c79be6b53f644cf75f1f SHA256 44a1820be379aaa2e433a75bce6cd1732458a4cf51a37026dfbcfb700422d551
