@@ -4,6 +4,10 @@
 
   20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cl-useful-meta-10.8.81.ebuild:
+  Moved vim to cl-desktop-meta
+
+  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cl-useful-meta-10.8.81.ebuild:
   Moved app-misc/screen to css-meta
 
 *cl-useful-meta-10.8.81 (13 Aug 2010)
